# innotter-micro-service

./: docker-compose.yml  pyproject.toml  requirements.txt
app/: entrypoint.sh
app/app/: celery.py  settings.py  urls.py
app/innotter/: __init__.py  apps.py  managers.py  models.py  paginations.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
app/innotter/migrations/: 0001_initial.py
app/test/: conftest.py
app/test/intergation/: conftest.py  test_feed.py  test_page.py  test_post.py  test_tag.py
app/test/unit/: conftest.py  test_tasks.py
